k8s/core/pgben-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgben-api
  labels:
    app: pgben-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: pgben-api
